Created landing page

--- a/Polly/Views/Assignment/Index.cshtml
+++ b/Polly/Views/Assignment/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<Polly.Models.Assignment>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Assignment";
 }
 
 <h2>Index</h2>
