--- a/Polly/Views/Customer/Index.cshtml
+++ b/Polly/Views/Customer/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<Polly.Models.Customer>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Customer";
 }
 
 <h2>Index</h2>
