--- a/Polly/Views/Department/Index.cshtml
+++ b/Polly/Views/Department/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<Polly.Models.Department>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Department";
 }
 
 <h2>Index</h2>
