--- a/Polly/Views/Employee/Index.cshtml
+++ b/Polly/Views/Employee/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<Polly.Models.Employee>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Employee";
 }
 
 <h2>Index</h2>
