--- a/Polly/Views/Shared/_Layout.cshtml
+++ b/Polly/Views/Shared/_Layout.cshtml
@@ -21,12 +21,12 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     
-                    <<li>@Html.ActionLink("Customer", "Index", "Customer")</li>
-                    <li>@Html.ActionLink("Product", "Index", "Product")</li>
-                    <li>@Html.ActionLink("Purchase", "Index", "Purchase")</li>
-                    <li>@Html.ActionLink("Department", "Index", "Department")</li>
-                    <li>@Html.ActionLink("Employee", "Index", "Employee")</li>
-                    <li>@Html.ActionLink("Assignment", "Index", "Assignment")</li>
+                    <<li>@Html.ActionLink("Customers", "Index", "Customer")</li>
+                    <li>@Html.ActionLink("Products", "Index", "Product")</li>
+                    <li>@Html.ActionLink("Purchases", "Index", "Purchase")</li>
+                    <li>@Html.ActionLink("Departments", "Index", "Department")</li>
+                    <li>@Html.ActionLink("Employees", "Index", "Employee")</li>
+                    <li>@Html.ActionLink("Assignments", "Index", "Assignment")</li>
 
                 </ul>
             </div>
