--- a/Polly/Views/Purchase/Index.cshtml
+++ b/Polly/Views/Purchase/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<Polly.Models.Purchase>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Purchase";
 }
 
 <h2>Index</h2>
